# Coding_loop

./: .dockerignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
agent/: pyproject.toml
agent/src/agent/: __init__.py  bridge_client.py  heartbeat.py  main.py  safety_gate.py  state.py  tasks.py
agent/src/agent/memory/: __init__.py  bootstrap.py  retrieval.py  store.py
agent/src/agent/skills/: __init__.py  browser.py  email.py  research.py
agent/tests/: conftest.py  test_bridge_client.py  test_heartbeat.py  test_memory.py  test_safety_gate.py  test_state.py  test_tasks.py
agent/tests/test_skills/: test_browser.py  test_email.py  test_research.py
claude-bridge/: config.example.toml  pyproject.toml
claude-bridge/launchd/: com.nathan.claude-bridge.plist
claude-bridge/src/bridge/: __init__.py  approval.py  audit.py  budget.py  claude_client.py  config.py  evolver_gate.py  killswitch.py  main.py  manifest.py  openai_client.py  policy.py  ratelimit.py  telegram_gateway.py
claude-bridge/tests/: conftest.py  test_approval.py  test_audit.py  test_budget.py  test_evolver_gate.py  test_integration.py  test_killswitch.py  test_manifest.py  test_openai_client.py  test_policy.py  test_ratelimit.py
docs/: ARCHITECTURE.md  OPERATIONS.md  PHASES.md  SECURITY.md
safety/: allowlist.yaml  budget.yaml  goals.md  manifest.sha256  protected-files.txt
scripts/: heartbeat.sh  kill.sh  setup-macos.sh  test-all.sh
